dir restructure, patched up setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ description = README.md
 requires-python = >=3.0
 
 [files]
-packages = click
+packages = dlrippyr
 
 [entry_points]
 console_scripts =
-    dlrippyr = dlrippyr:cli
+    dlrippyr = dlrippyr.cli:cli
