--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,15 @@ license = GNUv3
 description = README.md
 requires-python = >=3.0
 
-[files]
-packages = dlrippyr
+[options]
+include_package_data = True
+packages = find:
+install_requires =
+  wheel>=0.3
+  click>=8.0
+python_requires = >=3.6
 
-[entry_points]
+[options.entry_points]
 console_scripts =
     dlrippyr = dlrippyr.cli:cli
+
