--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ python_requires = >=3.8
 install_requires =
     importlib-metadata; python_version<"3.8"
     click>=8.0
+    loguru>=0.6
 
 
 [options.packages.find]
